# rssched-analysis

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: analyze-depot-vehicles.ipynb
rssched/: cli.py
rssched/data/: access.py  output_small_test_input.json  small_test_request.json  small_test_response.json
rssched/io/: reader.py
rssched/model/: request.py  response.py
rssched/visualization/: active_events.py  colors.py  fleet_efficiency.py  gantt.py  plot.py  vehicle_type_gantt.py  vehicle_utilization.py
tests/io/: test_reader.py
tests/visualization/: test_gantt.py  test_plot.py
