[tool.poetry]
name = "rssched"
version = "0.1.0"
description = "Analysis and visualization of results from the scheduler service."
authors = ["Merlin Unterfinger"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.1"
plotly = "^5.20.0"
typer = "^0.12.1"
pydantic = "^2.6.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.9.0"
flake8 = "^7.0.0"
pydocstyle = "^6.3.0"

[tool.poetry.scripts]
rssched-gantt = 'rssched.cli:app'

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pydocstyle]
match-dir = "[^\\.][^test].*"
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
